<resources>
    <string name="app_name">Quiz APP</string>
    <string name="_0_null">0/total questions</string>
    <string name="_0">0</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="riyad">RIYAD</string>
    <string name="alex">ALEX</string>
    <string name="hina">hina</string>
    <string name="asim">Asim</string>
    <string name="answer">answer</string>
    <string name="welcome_to" />
    <string name="attend" />
</resources>