<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E334E"
    tools:context=".MainActivity">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="41dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="41dp"
app:cardBackgroundColor="#2E334E"
    android:layout_margin="17dp"
    android:elevation="7dp"
    android:id="@+id/card_progress"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="41dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/roundeble_stroke">

    <View
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@drawable/gradiant"
        android:scaleX=".5"
        android:transformPivotX="0dp"
        android:id="@+id/progress_bar_view"
        />

    <TextView
        android:id="@+id/question_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_0_25"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />

    <ProgressBar
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#EC3636" />








</RelativeLayout>


</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_answer"
        android:layout_below="@+id/card_progress"
        android:layout_margin="17dp"
        app:cardBackgroundColor="#130232"
        app:cardCornerRadius="17dp"
        app:cardElevation="17dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="11dp"
                    android:background="@drawable/roundeble_stroke">

                    <TextView
                        android:id="@+id/text_counter"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"

                    android:gravity="center"
                    android:text="@string/what_is_your_name"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/roundeble_stroke"
                    android:gravity="center"
                    android:padding="11dp"
                    android:text="@string/riyad"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/roundeble_stroke"

                    android:gravity="center"
                    android:padding="11dp"
                    android:text="@string/alex"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/roundeble_stroke"
                    android:gravity="center"
                    android:padding="11dp"
                    android:text="@string/hina"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/roundeble_stroke"
                    android:gravity="center"
                    android:padding="11dp"
                    android:text="@string/asim"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="11dp"
        app:cardBackgroundColor="#130232"
        app:cardCornerRadius="1000dp"
        app:cardElevation="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:drawablePadding="11dp"

            android:includeFontPadding="false"
            android:text="@string/answer"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/done"
            app:drawableTint="@color/white" />


    </androidx.cardview.widget.CardView>




</RelativeLayout>